Changes for Profile

--- a/static/partials/aboutme.html
+++ b/static/partials/aboutme.html
@@ -10,6 +10,9 @@
         <div class="col-lg-4">
             <div class="image-wrap">                
                 <img src="/img/profile.jpg" alt="Subhasis Dutta">
+                <div style="padding-top: 30px;">
+                <a href="/temp/docs/SubhasisDuttaResume.pdf" class="btn btn-default btn-lg" target="_blank">Resume</a>
+                </div>
             </div>            
         </div>
         <div class="col-lg-8 " >
