--- a/template/index.html
+++ b/template/index.html
@@ -72,7 +72,7 @@
 		            <li><a href="#/category/download">Download Resource</a></li>
 		          </ul>
 		        </li> 
-		        <li ng-class="{ active: isActive('/profile')}" ng-click="collapseNavbar()"><a href="#/profile">Profile</a></li>
+		        <li ng-class="{ active: isActive('/profile')}" ng-click="collapseNavbar()"><a href="/profile">Profile</a></li>
 		        <li ng-class="{ active: isActive('/aboutme')}" ng-click="collapseNavbar()"><a href="#/aboutme">About Me</a></li>
 		        <li ng-class="{ active: isActive('/contact')}" ng-click="collapseNavbar()"><a href="#/contact">Contact</a></li>
                 <li class="nav-divider"></li>
