--- a/template/index_old.html
+++ b/template/index_old.html
@@ -17,37 +17,13 @@
 </section>
 </div>
 <!-- End of Splash Screen -->
-
-<!-- Homepage Slider -->
-<div id="home-slider">	
-    <div class="overlay"></div>
-
-    <div class="slider-text">
-    	<div id="slidecaption">
-    	
-    	</div>
-    </div>   
-	
-	<div class="control-nav">
-        <a id="prevslide" class="load-item"><i class="font-icon-arrow-simple-left"></i></a>
-        <a id="nextslide" class="load-item"><i class="font-icon-arrow-simple-right"></i></a>
-        <ul id="slide-list"></ul>
-        
-        <a id="nextsection" href="#work"><i class="font-icon-arrow-simple-down"></i></a>
-    </div>
-</div> 
-<!-- End Homepage Slider -->
-
-
-
-<!-- Our Work Section -->
 <div id="work" class="page">
 	<div class="container">
     	<!-- Title Page -->
         <div class="row">
             <div class="span12">
                 <div class="title-page">
-                    <h2 class="title"></h2>
+                    <h2 class="title">Profile</h2>
                     <h3 class="title-description"></h3>
                 </div>
             </div>
@@ -95,106 +71,6 @@
         <!-- End Portfolio Projects -->
     </div>
 </div>
-<!-- End Our Work Section -->
-
-<!-- About Section -->
-<div id="about" class="page-alternate">
-<div class="container">
-    <!-- Title Page -->
-    <div class="row">
-        <div class="span12">
-            <div class="title-page">
-                <h2 class="title">About Me</h2>             
-            </div>
-        </div>
-    </div>
-    <!-- End Title Page -->
-    
-    <!-- People -->
-    <div class="row">
-    	
-        <!-- Start Profile -->
-    	<div class="span4 profile">
-        	<div class="image-wrap">                
-                <img src="images/profile.jpg" alt="Subhasis Dutta">
-            </div>
-            <p class="profile-description">
-            I am a Computer Science graduate student at University of Texas at Dallas. I am currently working on a projects involving Kinect for controlling haptic devices, Using Cassandra for storing massive amount of data and a few others. This website is a collection of my professional, academic and hobby projects.</br>
-			I am passionate about Cloud Computing, Internet of Things, Robotics, Augmented Reality, Building scalable web applications and above all amalgamation of these technologies to design aesthetic application.</br>
-			Before joining grad school, I was involved in software development for 5 years at General Electric (GE) Healthcare, International Business Machine (IBM) and Infosys.  Apart from this I had collaborated with start-ups in Silicon Valley like Serendio and Infinilytics on building Big data applications. During my under graduation, I had co-founded a start-up XSROBOTICS with an objective to develop robot kits and provide educational training to students.</br>
-			I love learning new things and while I am not working I like meeting people and have a good time.
-            </p>
-
-            	
-            
-        </div>
-        <!-- End Profile -->
-    </div>
-    <!-- End People -->
-</div>
-</div>
-<!-- End About Section -->
-
-
-<!-- Contact Section -->
-<div id="contact" class="page">
-<div class="container">
-    <!-- Title Page -->
-    <div class="row">
-        <div class="span12">
-            <div class="title-page">
-                <h2 class="title">Get in Touch</h2>
-                <h3 class="title-description"></h3>
-            </div>
-        </div>
-    </div>
-    <!-- End Title Page -->
-    
-    <!-- Contact Form -->
-    <div class="row">
-    	<div class="span9">
-        
-        	<form id="contact-form" class="contact-form" action="#">
-            	<p class="contact-name">
-            		<input id="contact_name" type="text" placeholder="Full Name" value="" name="name" />
-                </p>
-                <p class="contact-email">
-                	<input id="contact_email" type="text" placeholder="Email Address" value="" name="email" />
-                </p>
-                <p class="contact-message">
-                	<textarea id="contact_message" placeholder="Your Message" name="message" rows="6" cols="40"></textarea>
-                </p>
-                <p class="contact-submit">
-                	<a id="contact-submit" class="submit" href="#">Post Message</a>
-                </p>
-                
-                <div id="response">
-                
-                </div>
-            </form>
-         
-        </div>
-        
-        <div class="span3">
-        	<div class="contact-details">
-        		<h3>Contact Details</h3>
-                <ul>
-                    <li>Subhasis Dutta</li>
-                    <li><a href="mailto:subhasisdutta300887@gmail.com">subhasisdutta300887@gmail.com</a></li>
-                    <li>(+91) 9686433777</li>
-                    <li>
-                        Bangalore
-                        <br>
-                        India
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </div>
-    <!-- End Contact Form -->
-</div>
-</div>
-<!-- End Contact Section -->
 {% endblock %}
 
 {% block specificScriptIncludeBottom %}
