--- a/template/sharedMaster.html
+++ b/template/sharedMaster.html
@@ -80,17 +80,13 @@
     	<a id="mobile-nav" class="menu-nav" href="#menu-nav"></a>
         
         <div id="logo">
-        	<a id="goUp" href="/" title="Subhasis Notebook"> Subhasis Dutta </a>
+        	<a id="goUp" title="Subhasis Notebook"> Subhasis Dutta Profile</a>
         </div>
         
         <nav id="menu">
         	<ul id="menu-nav">
-            	<li class="current"><a href="#home-slider">Home</a></li>
-            	<li><a href="/note" class="external">Notes</a></li>
-                <li><a href="#work">Profile</a></li>
-                <li><a href="#about">About Me</a></li>
-                <li><a href="#contact">Contact</a></li>
-				<li><a href="tempasset/doc/SubhasisDutta-Resume.pdf" class="external" target="_blank">Resume</a></li> 
+            	<li ><a href="/" class="external">Home</a></li>            	
+				<li><a href="/temp/docs/SubhasisDuttaResume.pdf" class="external" target="_blank">Resume</a></li>				
             </ul>
         </nav>
         
@@ -103,11 +99,11 @@
 {% endblock %}
 
 <!-- Twitter Feed -->
-<!-- 
+ <!--
 <div id="twitter-feed" class="page-alternate">
 	<div class="container">
     	
-    	
+    	 
     	<div class="row">
             <div class="span12">
                 <div class="follow">
@@ -117,7 +113,7 @@
                  <div id="ticker" class="query"> 
                 </div>
             </div>
-        </div>
+        </div> 
     </div>
 </div> -->
 <!-- End Twitter Feed -->
@@ -144,7 +140,8 @@
 
 <!-- Footer -->
 <footer>
-	<p class="credits">&copy;2015  Created By <a href="http://subhasisdutta.com/" title="Subhasis Dutta | Developer">Subhasis Dutta</a>.      Web Template designed by <a href="http://www.alessioatzeni.com/" title="Alessio Atzeni | Web Designer &amp; Front-end Developer">Alessio Atzeni</a></p>
+	<p class="credits">&copy;2015 &nbsp;&nbsp;Developed By &nbsp;<a href="http://subhasisdutta.com/" title="Subhasis Dutta | Developer">Subhasis Dutta</a>. Powered by <a href="https://cloud.google.com/appengine/" title="Google App Engine" target="_blank">Google App Engine</a>
+	</p>
 </footer>
 <!--  End Footer -->
 
