--- a/static/partials/contact.html
+++ b/static/partials/contact.html
@@ -33,11 +33,11 @@
                 <ul>
                     <li>Subhasis Dutta</li>
                     <li><a href="mailto:subhasisdutta300887@gmail.com">subhasisdutta300887@gmail.com</a></li>
-                    <li>(+91) 9686433777</li>
+                    <li>+1 (972)408-6779</li>
                     <li>
-                        Bangalore
+                        Dallas, Texas
                         <br>
-                        India
+                        United States
                     </li>
                 </ul>
             </div>
